\name{NEWS}
\title{NEWS file for the survival package}
\section{Changes in version 3.2-14}{
  \itemize{
    \item Update the royston function to report the scaled Cox-Snell
    Rsquared as the Nagelkirke estimate, and clarify the documentation.
    \item Address an origin= issue for tmerge, when Dates are the time scale
}}
 
\section{Changes in version 3.2-13}{
  \itemize{
    \item Clarify some sentences in tmerge help file.
    \item Fix a memory access error in concordance3.c, found by CRAN.
    \item Add the drop.special function (internal) to work around offset
    problems in [.terms.
}}
\section{Changes in version 3.2-12}{
  \itemize{
    \item Avoid a downstream error from infinte coefficients in
    coxph.  In special case it would fail by passing an NA to C code.
    \item The df column from cox.zph could be incorrect for a coxme
    model.
    \item cox.zph would crash for a coxme model whose random effect
    contained a factor (odd issue with model.frame).
    \item yates error for a coxph model with a strata * covariate
    interaction
    \item Clarify documentation for the royston command.
    \item Add error for survexp applied to a multistate model.
    \item Make the labeling of restricted mean consistent in print and
    summary, for single state and multistate survfit.
    \item With just the right data the coxexact.c routine would do a
    very inefficient calculation: so slow it appeared to be an infinite
    loop.
    \item Bug in pspline.R: I had neglected to include 'degree' in the
    retained arguments for makepredictcall.
    \item Fix scale factor error in cholesky3.c, which could cause it to
    incorrectly mark a column as singular.  Found via a survreg example
    from Nathan Adams, where y had large values.
    \item 2021-08-12: update CRAN
}}
\section{Changes in version 3.2-11}{
  \itemize{
    \item Missing labels for the "pairwise" option in yates(), fixed.
    \item Bug in plot.survfit -- could not use conf.int=T and xmax in