@@ -125,8 +125,8 @@ double coxd2(int d, int n, double *score, double *dmat, double *d1j,
     
 Now for the main body.  Start with the dull part of the code:
 declarations.
-I use [[maxiter2]] for the
-S structure and [[maxiter]] for the variable within it, and
+I use \code{maxiter2} for the
+S structure and \code{maxiter} for the variable within it, and
 etc for the other input arguments.
 All the input arguments except strata are read-only.
 The output beta vector starts as a copy of ibeta.
@@ -142,7 +142,7 @@ SEXP coxexact(SEXP maxiter2,  SEXP y2,
 	      SEXP covar2,    SEXP offset2, SEXP strata2,
 	      SEXP ibeta,     SEXP eps2,    SEXP toler2) {
     int i,j,k;
-    int     iter;
+    int     iter, notfinite;
     
     double **covar, **imat;  /*ragged arrays */
     double *time, *status;   /* input data */
@@ -399,7 +399,7 @@ loglik[2] =0;                  /* score test stored here */
 for (i=0; i<nvar; i++)
     loglik[2] +=  u[i]*d1[i];
 
-if (maxiter==0) {
+if (maxiter==0 || isfinite(loglik[0])==0) { /* give up on overflow */
     iter =0;  /*number of iterations */
     <<excox-finish>>
     }
@@ -445,14 +445,24 @@ for (iter=1; iter<=maxiter; iter++) {
     */
     loglik[3] = cholesky2(imat, nvar, toler); 
 
-    if (fabs(1-(loglik[1]/newlk))<= eps && halving==0) { /* all done */
+    notfinite = 0;
+    for (i=0; i<nvar; i++) {
+    	if (isfinite(u[i]) ==0) notfinite=2;     /* infinite score stat */
+        for (j=0; j<nvar; j++) {
+	    if (isfinite(imat[i][j]) ==0) notfinite =3; /*infinite imat */
+	    }	
+	}	
+    if (isfinite(newlk) ==0) notfinite =4;
+
+    if (notfinite==0 && fabs(1-(loglik[1]/newlk))<= eps && halving==0) { 
+        /* all done */
         loglik[1] = newlk;
        <<excox-finish>>
         }
 
     if (iter==maxiter) break;  /*skip the step halving and etc */
 
-    if (newlk < loglik[1])   {    /*it is not converging ! */
+    if (notfinite > 0 || newlk < loglik[1])   { /*it is not converging ! */
     	halving =1;
     	for (i=0; i<nvar; i++)
     	    beta[i] = (oldbeta[i] + beta[i]) /2; /*half of old increment */
@@ -471,8 +481,20 @@ for (iter=1; iter<=maxiter; iter++) {
 
 
 /*
-** Ran out of iterations 
+** We end up here only if we ran out of iterations
+**  recompute the last good version of the loglik and imat
+** If maxiter =0 or 1, though, leave well enough alone.
 */
+if (maxiter > 1) {
+   for (i=0; i< nvar; i++) beta[i] = oldbeta[i];
+   newlk =0;
+   for (i=0; i<nvar; i++) {
+       u[i] =0;
+       for (j=0; j<nvar; j++)
+           imat[i][j] =0;
+   }
+   <<excox-addup>>
+}
 loglik[1] = newlk;
 loglik[3] = 1000;  /* signal no convergence */
 <<excox-finish>>
